# io_bench

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
docs/: index.md  io_bench.md  quick_start.md
io_bench/: __init__.py  io_bench.py
io_bench/utilities/: bench.py  explain.py  helper.py  parsing.py
mkdocs/: mkdocs.yml
mkdocs/docs/: about.md  index.md
quick_start/: index.html
source/: index.html
tests/: test_io_bench.py  test_utilities.py
