[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "build>=1.2.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "io_bench"
version = "0.1.0"
description = "IO Bench is a library designed to benchmark the performance of standard flat file formats and partitioning schemes."
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}
keywords = ["arrow", "avro", "feather", "parquet", "polars", "utils", "performance counter", "benchmark"]

# Authors and Maintainers
authors = [
    {name = "Aaron Stopher"}
]

classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
    'fastavro==1.9.5',
    'fastparquet==2024.5.0',
    'pandas==2.2.2',
    'plotly==5.23.0',
    'polars==1.4.0',
    'psutil==6.0.0',
    'pyarrow==17.0.0',
    'rich==13.7.1',
]

# List additional groups of dependencies here (e.g. development
# dependencies). Users will be able to install these using the "extras"
# syntax, for example:
#
#   $ pip install io_bench[dev]
#
# Optional dependencies the project provides. These are commonly 
# referred to as "extras". For a more extensive definition see:
# https://packaging.python.org/en/latest/specifications/dependency-specifiers/#extras
[project.optional-dependencies]
dev = [
    "virtualenv==20.26.3",
    "mkdocs==1.6.0",
    "mkdocstrings==0.25.2",
    "mike==2.1.3",
]
test = [
    "tox==4.16.0",
    "codecov==2.1.13",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/aastopher/io_bench"
"Documentation" = "https://aastopher.github.io/io_bench/"
"Bug Reports" = "https://github.com/aastopher/io_bench/issues"

[tool.setuptools]
packages = ["io_bench", "io_bench.utilities"]